--- a/frontend/easybit/pubspec.yaml
+++ b/frontend/easybit/pubspec.yaml
@@ -30,6 +30,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  localstorage: ^4.0.0+1
 
     
   # The following adds the Cupertino Icons font to your application.
@@ -39,6 +40,7 @@ dependencies:
   sqflite: ^2.3.0
   path: ^1.8.3
   http: ^1.1.0
+ 
 
 dev_dependencies:
   flutter_test:
@@ -64,9 +66,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-   - images/background.png
-   - images/logo.png
-   - images/load.gif
+   - images/
+  
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
