manage dropdown menu in btc field

--- a/frontend/easybit/pubspec.yaml
+++ b/frontend/easybit/pubspec.yaml
@@ -34,7 +34,7 @@ dependencies:
     
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
+  cupertino_icons: ^1.0.6
   text_form_field_validator: ^0.0.3
   sqflite: ^2.3.0
   path: ^1.8.3
@@ -67,6 +67,7 @@ flutter:
    - images/background.png
    - images/logo.png
    - images/load.gif
+   - images/arrow_swap.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
