--- a/frontend/easybit/pubspec.yaml
+++ b/frontend/easybit/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   flutter_svg: ^2.0.9
   curved_navigation_bar: ^1.0.3
   flutter_auto_form: ^1.0.7
+  flutter_keyboard_visibility: ^5.4.1
 
 
     
